# SCQO

./: .gitignore  CLAUDE.md  INSTALL.md  README.md  RELEASES.toml  TUTORIAL.md  pyproject.toml
.github/workflows/: tests.yml
scqo/: __init__.py  __main__.py  _scqat.py  _state_io.py  backend.py  browse.py  browse_metadata.json  categories.py  config.py  contract.py  datastore.py  device.py  experiment.py  fieldmap.py  labconfig.py  parameters.py  physical.py  provenance.py  registry.py  result.py  roster.py  session.py  suggestions.py  testing.py
scqo/cli/: __init__.py  __main__.py  _backends.py  _engine.py  _review.py  accept.py  calibrate.py  cooldown.py  device.py  devices.py  doctor.py  find.py  run.py  sample.py  set.py  state.py  suggest.py  tag.py  user.py
scqo/experiments/: __init__.py  _drive_power.py  _sim.py  pair_zz_coupler.py  power_rabi.py  qubit_drag_alternating.py  qubit_drag_equator.py  qubit_echo.py  qubit_echo_flux.py  qubit_pi_pulse_error.py  qubit_power_rabi.py  qubit_ramsey.py  qubit_relaxation.py  qubit_relaxation_flux.py  qubit_spectroscopy.py  qubit_spectroscopy_flux.py  qubit_spectroscopy_flux_pulse.py  qubit_sqrb.py  qubit_tomography.py  ramsey.py  readout_frequency.py  readout_power.py  resonator_spectroscopy.py  resonator_spectroscopy_flux.py  resonator_spectroscopy_power.py  resonator_spectroscopy_power_amp.py  resonator_spectroscopy_power_chain.py  single_shot_readout.py  t2_echo.py
scqo/viewer/: __init__.py  __main__.py  app.py
scqo/viewer/templates/: base.html  device.html  run.html  runs.html  trends.html
tests/: conftest.py  test_cli_backends.py  test_cli_cooldown.py  test_cli_device.py  test_cli_devices.py  test_cli_doctor.py  test_cli_run.py  test_cli_sample.py  test_cli_user.py  test_component_invariants.py  test_config_history.py  test_contract.py  test_datastore.py  test_end_to_end.py  test_fieldmap.py  test_index_scale.py  test_labconfig.py  test_parameter_defaults.py  test_physical.py  test_provenance.py  test_quickwins.py  test_roster.py  test_set.py  test_setup_state.py  test_suggestions.py  test_viewer.py
tests/demo_instr_config/OPX_OPX1000/: state.json  wiring.json
tests/demo_instr_config/QBlox_Scheduler/: dut_config_AS_QRC.json  dut_config_AS_QRC_viewable.json
