[project]
name = "scqo"
version = "0.1.0"
description = "Superconducting Qubit Orchestration — instrument-agnostic experiment API shared by QM and Qblox backends"
readme = "CLAUDE.md"
requires-python = ">=3.10,<3.13"
license = { text = "BSD-3-Clause" }
dependencies = [
    "pydantic>=2.6",
    "xarray>=2024.7.0",
    "numpy>=1.26",
    "scqat",            # the shared analysis engine: estimators + fitters (import-light; lazy-imported in estimate())
    "netcdf4>=1.6",     # datastore: dataset.nc has a string qubit coord (needs netCDF4, not the scipy netCDF3 fallback)
    "tomli>=2.0; python_version<'3.11'",  # labconfig TOML parsing on py3.10
]

# IMPORTANT: scqo deliberately depends on NO instrument library (no qm-qua, no
# quam, no qualibrate, no qblox-scheduler). That is what lets both LCHQMDriver
# and LCHQBDriver depend on scqo without dragging each other's hardware stack in.
# scqat is the one allowed non-instrument dependency: it is the single estimator
# engine (one estimator per probing method), so SCQO never fits inline. lmfit is
# now a transitive dependency via scqat.

[project.optional-dependencies]
viewer = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
]

[tool.uv.sources]
scqat = { path = "../SCqubit-analysis-tool", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scqo"]

[dependency-groups]
dev = ["pytest>=8.0", "httpx>=0.27"]  # httpx: FastAPI TestClient for the viewer tests

[tool.black]
line-length = 120
