[project]
name = "scqo"
version = "0.11.1"
description = "Superconducting Qubit Orchestration — instrument-agnostic experiment API shared by QM and Qblox backends"
readme = "CLAUDE.md"
requires-python = ">=3.10,<3.13"
license = { text = "BSD-3-Clause" }
dependencies = [
    "pydantic>=2.6",
    "xarray>=2024.7.0",
    "numpy>=1.26",
    "scqat",            # the shared analysis engine: estimators + fitters (import-light; lazy-imported in estimate())
                        # needs scqat tag v0.1.4+ (punchout outlier test is baseline-normalized for the |IQ|-scaled sim,
                        # SCQO 586af0e); scqat metadata caught up at v0.1.5, but the lab installs scqat editable at the
                        # RELEASES.toml-pinned tag, so no version pin here — the manifest is the authority
    "netcdf4>=1.6",     # datastore: dataset.nc has a string qubit coord (needs netCDF4, not the scipy netCDF3 fallback)
    "tomli>=2.0; python_version<'3.11'",  # labconfig TOML parsing on py3.10
]

# IMPORTANT: scqo deliberately depends on NO instrument library (no qm-qua, no
# quam, no qualibrate, no qblox-scheduler). That is what lets both LCHQMDriver
# and LCHQBDriver depend on scqo without dragging each other's hardware stack in.
# scqat is the one allowed non-instrument dependency: it is the single estimator
# engine (one estimator per probing method), so SCQO never fits inline. lmfit is
# now a transitive dependency via scqat.

[project.scripts]
scqo = "scqo.cli.__main__:main"  # the lab command; re-run `uv pip install -e` after upgrading

[project.optional-dependencies]
viewer = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",  # FastAPI Form(...) — the tag-edit POST
]

[tool.uv.sources]
scqat = { path = "../scqat", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scqo"]

[dependency-groups]
dev = ["pytest>=8.0", "httpx>=0.27"]  # httpx: FastAPI TestClient for the viewer tests

[tool.black]
line-length = 120
